--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     
     <hr />
-    <div class="h5 font-weight-bold pb-2 pagebreak">Projetos no iFood:</div>
+    <div class="h5 font-weight-bold pb-2">Projetos no iFood:</div>
     <div class="row">
       <div class="col-md">
         <ul>
