--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
       <div class="col-md">
         <div class="d-flex justify-content-center">
           <address class="">
-            <strong>Endereço:</strong><br/>
-            Jundiaí / SP<br/>
+            <strong>Address:</strong><br/>
+            R. Jasmim, 466 - 14B<br/>
+            Mansões Santo Antônio - 13087-488<br/>
+            Campinas / SP / Brazil<br/>
           </address>
         </div>
       </div>
       <div class="col-md">
         <div class="d-flex justify-content-center">
           <address>
-            <strong>Contato:</strong><br/>
-            <strong>E-mail:</strong> carneiro.leandro@outlook.com<br/>
-            <strong>Celular:</strong> (11) 97244-5778<br/>
+            <strong>Contact:</strong><br/>
+            <strong>E-mail:</strong> leandro@carnei.ro<br/>
+            <strong>Mobile:</strong> +55 11 97244-5778<br/>
           </address>
         </div>
       </div>
@@ -32,150 +34,153 @@
 
     <div class="h3 text-uppercase font-weight-bold pt-3">Leandro Souza Carneiro</div>
     <hr/>
-    <p>Senior SysAdmin / SRE em iFood. Conhecimentos em Cloud Computing, API Gateway, cultura DevOps e sistemas GNU/Linux.</p>
-    <p><strong>Objetivo:</strong> Atuar na área de Infraestrutura / SRE / DevOps</p>
+    <p>
+      SRE with good knowledge in Cloud Computing, DevOps, GNU / Linux systems and Java application servers. Working in a high throughput company with fully Cloud Environment.
+    </p>
+    <p><strong>Objective:</strong> SRE / DevOps / IT Infrastructure areas.</p>
     <hr />
-    <div class="h5 font-weight-bold pb-2">Formação Acadêmica:</div>
+    <div class="h5 font-weight-bold pb-2">Academic Background:</div>
     <div class="row">
       <div class="col-md">
         <ul class="list-unstyled">
-          <li><strong>Curso: </strong>Engenharia de Computação</li>
-          <li><strong>Grau: </strong>Bacharel</li>
-          <li><strong>Conclusão: </strong>Dez/2012</li>
-          <li><strong>Instituição: </strong>Universidade São Francisco</li>
+          <li><strong>Course: </strong>Computer Engineering</li>
+          <li><strong>Degree: </strong>Bacharel - B.S.</li>
+          <li><strong>Conclusion: </strong>Dec/2012</li>
+          <li><strong>Institution: </strong>Universidade São Francisco</li>
         </ul>
       </div>
       <div class="col-md">
         <ul class="list-unstyled">
-          <li><strong>Curso: </strong>Técnico em Computação</li>
-          <li><strong>Grau: </strong>Técnico</li>
-          <li><strong>Conclusão: </strong>Dez/2007</li>
-          <li><strong>Instituição: </strong>Colégio Divino Salvador</li>
+          <li><strong>Course: </strong>Computer Technician</li>
+          <li><strong>Degree: </strong>Technical</li>
+          <li><strong>Conclusion: </strong>Dec/2007</li>
+          <li><strong>Institution: </strong>Colégio Divino Salvador</li>
         </ul>
       </div>
     </div>
 
     <hr />
-    <div class="h5 font-weight-bold pb-2">Idiomas:</div>
+    <div class="h5 font-weight-bold pb-2">Certification:</div>
     <div class="row">
       <div class="col-md">
         <ul class="list-unstyled">
-          <li><strong>Inglês</strong></li>
-          <li><strong>Nível: </strong>Avançado / Fluente</li>
+          <li><strong>Title: </strong>Terraform Associate</li>
+          <li><strong>Company: </strong>HashiCorp</li>
+          <li><strong>Issued: </strong>Sep/2019</li>
+          <li><strong>Valid Until: </strong>Sep/2021</li>
+        </ul>
+      </div>
+    </div>
+
+    <hr />
+    <div class="h5 font-weight-bold pb-2">Languages:</div>
+    <div class="row">
+      <div class="col-md">
+        <ul class="list-unstyled">
+          <li><strong>English</strong></li>
+          <li><strong>Level: </strong>Fluent</li>
+        </ul>
+        <ul class="list-unstyled">
+          <li><strong>Portuguese</strong></li>
+          <li><strong>Level: </strong>Native</li>
         </ul>
       </div>
       <div class="col-md">
           <ul class="list-unstyled">
-              <li><strong>Intercâmbio:</strong></li>
-              <li><strong>Curso: </strong>English for non-Americans</li>
-              <li><strong>Duração: </strong>1 mês</li>
-              <li><strong>Conclusão: </strong>Mar/2014</li>
-              <li><strong>Instituição: </strong>ELS Language School - Silicon Valley</li>
+              <li><strong>Exchange Course:</strong></li>
+              <li><strong>Course: </strong>English for non-Americans</li>
+              <li><strong>Degree: </strong>1 month</li>
+              <li><strong>Conclusion: </strong>Mar/2014</li>
+              <li><strong>Institution: </strong>ELS Language School - Silicon Valley</li>
           </ul>
       </div>
     </div>
 
     <hr />
-    <div class="h5 font-weight-bold pb-2">Experiência Profissional:</div>
+    <div class="h5 font-weight-bold pb-2">Professional background:</div>
     <div class="row">
       <div class="container pb-1">
         <ul class="list-unstyled">
           <li><strong>iFood</strong></li>
-          <li>out/2018 até o presente momento</li>
-          <li>SRE - Sr SysAdmin</li>
+          <li>out/2018 - Present</li>
+          <li>SRE</li>
         </ul>
       </div>
       <div class="container pb-1">
         <ul class="list-unstyled">
           <li><strong>ADTsys Software</strong></li>
-          <li>mar/2018 até set/18</li>
-          <li>Analista de Infraestrutura em TI Sr. II</li>
+          <li>mar/2018 - sep/2018</li>
+          <li>Senior IT Infrastructure Analyst II</li>
         </ul>
       </div>
       <div class="container pt-1">
         <ul class="list-unstyled">
           <li><strong>Programarte Consultoria e Desenvolvimento de Softwares</strong></li>
-          <li>jul/2010 até mar/2018</li>
-          <li>Analista de Infraestrutura em TI</li>
+          <li>jul/2010 - mar/2018</li>
+          <li>IT Infrastructure Analyst</li>
         </ul>
       </div>
     </div>
     
     <hr />
-    <div class="h5 font-weight-bold pb-2">Projetos no iFood:</div>
+    <div class="h5 font-weight-bold pb-2 pagebreak">Work accomplishments at iFood:</div>
     <div class="row">
       <div class="col-md">
         <ul>
-          <li class="pb-1 text-justify">Gerenciamento e evolução da solução de API Gateway do iFood, baseada em Kong.</li>
-          <li class="pb-1 text-justify">Implementação de monitoramento (Prometheus) com métricas por serviços, rotas e HTTP Codes de todos os API Gateways.</li></li>
-          <li class="pb-1 text-justify">Desenvolvimento de plugins para o API Gateway a fim de lidar com autenticação, autorização e roteamentos.</li>
-          <li class="pb-1 text-justify">Tratativa de logs de ELBs e API Gateway com solução baseada em ELK.</li>
-          <li class="pb-1 text-justify">Desenvolvimento de cookbook em Chef para melhorar a automação da configuração do serviço de API Gateway.</li>
-          <li class="pb-1 text-justify">Implementação e sustentação da infraestrutura do iFood.</li>
+          <li class="pb-1 text-justify">Secrets management project: Implanting from scratch HashiCorp Vault with High Availability, fully "infrastructure as code" using Terraform, monitored with Prometheus Stack and audit with ElasticSearch. Simplifying the management of the secrets and giving more autonomy for developers.</li>
+          <li class="pb-1 text-justify">Participation in migrating almost all iFood resources from an AWS Region to another, using only "infrastructure as code". The process involved the creation of Terraform modules, understanding legacy infrastructure and creating parse scripts for automation of the task.</li>
+          <li class="pb-1 text-justify">Improve and evolve the iFood API Gateway solution based in Kong. Creation of Chef Cookbook for installing and managing Kong resources based on "GitOps" idea. Allowing developers to expose their services by only opening a Pull Request to the repository.</li>
+          <li class="pb-1 text-justify">Development of Kong plugins for iFood needs.</li>
         </ul>
       </div>
     </div>
 
     <hr />
-    <div class="h5 font-weight-bold pb-2 pagebreak">Projetos na ADTsys:</div>
+    <div class="h5 font-weight-bold pb-2">Work accomplishments at ADTsys:</div>
     <div class="row">
       <div class="col-md">
         <ul>
-          <li class="pb-1 text-justify">
-              Desenvolvimento de métodos em Groovy para servir em pipelines do Jenkins a fim de automatizar processos de um projeto que não tem APIs.
-          </li>
-          <li class="pb-1 text-justify">Desenvolvimento de ferramenta Python, para ofertar instancias Spot na AWS e registrá-las nas <i>Stacks/Layers</i> do OpsWorks.
-            Quando o CloudWatch detecta uma sobrecarga na instância, com base no limite personalizado, é acionado um webhook exposto pelo Jenkins, que pode receber, além do valor da oferta para o lance, parâmetros como "layerId", "stackID", tamanho da instância e muito mais.
-            No final do ciclo de vida da instância, uma função Lambda é acionada para remover a instância do OpsWorks. Ferramenta usada como parte da integração para ambiente de infraestrutura efêmera.
-          </li>
-          <li class="pb-1 text-justify">Criação e gerenciamento de receitas 'Chef' para configuração de máquinas via OpsWorks.</li>
-          <li class="pb-1 text-justify">Desenvolvimento de 'manifestos' no Puppet para codificar os ambientes dos nossos clientes, legados e novos.</li>
-          <li class="pb-1 text-justify">Tradução de Ansible 'playbooks' para Puppet 'manifests' para equalizar o ambiente.</li>
-          <li class="pb-1 text-justify">Desenvolvimento de 'pipelines' no Jenkins para automação de <i>deploys</i>. Ambientes CI / CD.
-                Quando um cliente solicita um novo pipeline de CI / CD, cria-se um novo repositório no GitLab com duas <i>branches</i>, pipelines no Jenkins e configuração do webhook para aplicar as alterações com um evento push a uma <i>branch</i> específica.
-                Como a ADTsys vende esses ambientes para muitos clientes, o trabalho se tornou repetitivo, então um pipeline foi desenvolvido para automatizar o processo de criação desses ambientes. <br/>
-                Para os clientes que já possuem seu próprio repositório, cria-se uma automação customizada para construir e <i>"deployar"</i> o código do cliente conforme suas necessidades. <br/>
-          </li>
-          <li class="pb-1 text-justify">Automação no Jenkins para expor um webhook para enviar notificações por SMS para trabalhar com o UpTime Robot. O script python recebe os parâmetros (number, monitoring name, url) e usa a API directcall para enviar as notificações.</li>
+          <li class="pb-1 text-justify">Development of a Python tool to bid Spot Instances on AWS Cloud and register them in OpsWorks <i>stack/layers</i> based on CloudWatch alerts.</li>
+          <li class="pb-1 text-justify">Creation and management Chef 'recipes' for machine configuration via OpsWorks.</li>
+          <li class="pb-1 text-justify">Development of 'manifests' in Puppet to code our clients environments, legacy and new.</li>
+          <li class="pb-1 text-justify">Translation of Ansible 'playbooks' to Puppet 'manifests' to equalize the environment.</li>
+          <li class="pb-1 text-justify">Development of 'pipelines' at Jenkins for automation of application deployments in CI/CD environments.</li>
         </ul>
       </div>
     </div>
     
     <hr />
-    <div class="h5 font-weight-bold pb-2">Projetos na Programarte:</div>
+    <div class="h5 font-weight-bold pb-2">Work accomplishments at Programarte:</div>
     <div class="row">
       <div class="col-md">
         <ul>
-        <li class="pb-1 text-justify">Pesquisa, implementação e documentação de cluster de WildFly, containerizado com Docker, geo-redundante e escalável. Projeto desenvolvido do zero para ambiente de alta disponibilidade do sistema "Neo" da "simplesmenteUse" em infraestrutura AWS ou on-premises.
-                Este projeto foi desenvolvido com cluster de Docker Swarm para o ambiente SaaS, com Weave plugin, também foi utilizado PeerVPN para criar uma rede mesh, com multicast habilitado inclusive nas redes AWS. Todos os containers tem health-checks, auto-healing and habilidade para escalar horizontalmente. A arquitetura contém DNS via R53, Apache Containers com Mod_Cluster via multicast to auto-discovery dos Containers WildFly, MongoDB clusterizado (replicaSet) e RDS server, ou MySQL com Percona.
-        </li>
-        <li class="pb-1 text-justify">Pesquisa e documentação de cluster de balanceamento de carga com mod_jk, dois JBoss Application Servers e Apache com SSL, utilizando algoritmo ‘Round Robin’, conectados ao SQL Server mirroring a fim de configurar ambiente de alta disponibilidade para a versão SaaS do "simplesmenteUse" em infraestrutura AWS. </li>
-        <li class="pb-1 text-justify">Migração de servidores de e-mail da "simplesmenteUse" para Zimbra. Configuração do próprio Zimbra, além dos DNS e firewall. Maior estabilidade adquirida e disponibilidade de análise dos logs de envio / recebimento.</li>
-        <li class="pb-1 text-justify">Automatização de processos em shell script de diversas rotinas como instalação e deploy, checagem de servidores, backup / restore de arquivos do FileServer e também de bancos de dados Oracle, SQL Server e MySQL, minimizando  possíveis falhas humanas durante estes processos.</li>
+          <li class="pb-1 text-justify">Research, implementation and documentation of WildFly cluster, containerized and orchestrated by docker swarm, geo-redundant and scalable. The project developed from scratch for a high availability environment for product "simplesmenteUse - NEO" in AWS infrastructure or on-premises.</li>
+          <li class="pb-1 text-justify">Email servers migration to Zimbra. Configuration of Zimbra itself, besides the DNS and firewall. Project has increased availability, stability and log analysis.</li>
+          <li class="pb-1 text-justify">Shell script, in Jenkins "freestyle mode" job, for automation various processes such as product deploy, server checking, backup / restore files from fileservers and databases (Oracle, SQL Server, MySQL and MongoDB). These automatons have decreased human error.</li>
+          <li class="pb-1 text-justify">Development proof of concept online store project. Built with Angular 5 and Firebase, the project has been used to practice new technologies and to present the DevOps culture to the company coworkers. In these project, it has configured the git tool to run the Lynt tool and some tests before the push. After the push, the code was stored in a GitLab repository with webhook to a Jenkins pipeline that checks out the code, run the test (using json-server to mock the Firebase), builds the SaSS and modules, creates a Docker Image that was pushed to GitLab registry, then updates the server.</li>
         </ul>
       </div>
     </div>
 
     <hr />
-    <div class="h5 font-weight-bold pb-2">Conhecimentos:</div>
+    <div class="h5 font-weight-bold pb-2">Skills:</div>
     <div class="row">
       <div class="col-md">
         <ul class="list-unstyled">
-          <li><strong>Sistemas Operacionais:</strong> Linux (preferencialmente Red Hat-ish), Windows</li>
-          <li><strong>Cloud:</strong> AWS, GCP, Azure</li>
-          <li><strong>Containerização:</strong>Kubernets, Docker e Swarm </li>
-          <li><strong>Virtualização:</strong> KVM, VirtualBox</li>
-          <li><strong>Linguagens:</strong> Lua, Ruby, Python, Groovy, Shell Script</li>
-          <li><strong>Automação:</strong> Jenkins, Vagrant, Terraform</li>
-          <li><strong>Gerenciadores de Configuração:</strong> Puppet, Chef, OpsWorks</li>
+          <li><strong>Operational Systems:</strong> Linux, Windows</li>
+          <li><strong>Cloud:</strong> AWS, Azure, GCP</li>
+          <li><strong>Languages:</strong> Ruby, Lua, Python, Shell Script, Groovy, Golang</li>
+          <li><strong>Container Orchestration:</strong> Kubernetes</li>
+          <li><strong>Virtualization:</strong> KVM, VirtualBox</li>
+          <li><strong>Automation:</strong> Jenkins, Vagrant, Terraform, Packer</li>
+          <li><strong>Configuration Managers:</strong> Chef, Puppet, OpsWorks</li>
           <li><strong>Web Servers / Load-Balancer / Proxies:</strong> Kong API Gateway, OpenResty, Nginx, HA Proxy, Apache</li>
+          <li><strong>CDN / WAF:</strong> Akamai, CloudFlare</li>
         </ul>
       </div>
     </div>
- 
-
-
     <hr />
+
   </div>
 </body>
 </html>
