--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
 	.pagebreak { page-break-before: always; } 
   </style>
+  <title>Leandro Carneiro - CV</title>
 </head>
 <body>
   <div class="container">
