--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="h3 text-uppercase font-weight-bold pt-3">Leandro Souza Carneiro</div>
     <hr/>
     <p>
-      Site Reliability Engineering with good knowledge in Cloud Computing, Kubernetes, GNU / Linux systems, API Gateway, Git and DevOps Culture. Working in a high throughput company with fully Cloud Environment.
+      Site Reliability Engineer with good knowledge in Cloud Computing, Kubernetes, GNU / Linux systems, API Gateway, Git and DevOps Culture. Working in a high throughput company with fully Cloud Environment.
     </p>
     <p><strong>Objective:</strong> SRE / DevOps / IT Infrastructure areas.</p>
     <hr />
